# cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
examples/: agent_probe_guard_env_coupling.md  fabricationguard_quickstart.py
openinterp/: __init__.py  agent_probe_guard.py  atlas.py  cli.py  guard.py  lora.py  models.py  probebench.py  trace.py
tests/: test_atlas.py  test_guard.py  test_trace.py
