[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "openinterp"
version = "0.1.0"
description = "Python SDK + CLI for openinterp.org — search the feature Atlas, generate Traces from your SAE, compute InterpScore. The operational layer for mechanistic interpretability."
authors = [{name = "Caio Vicentino", email = "hi@openinterp.org"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "interpretability",
    "sparse autoencoder",
    "mechanistic interpretability",
    "sae",
    "LLM",
    "ai safety",
    "transformer",
    "trace",
    "circuit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
    "pydantic>=2.0",
    "huggingface_hub>=0.27",
]

[project.optional-dependencies]
# Real model + SAE loading for `trace`, `score`, `steer`
full = [
    "torch>=2.3",
    "transformers>=4.55",
    "safetensors>=0.4",
    "accelerate>=1.0",
    "numpy>=1.26",
]
# Developer tooling
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
openinterp = "openinterp.cli:main"

[project.urls]
Homepage = "https://openinterp.org"
Repository = "https://github.com/OpenInterpretability/cli"
Documentation = "https://openinterp.org/docs"
"Bug Tracker" = "https://github.com/OpenInterpretability/cli/issues"
Changelog = "https://github.com/OpenInterpretability/cli/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["openinterp"]

[tool.hatch.build.targets.sdist]
include = ["openinterp", "tests", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]
